# TextBased-AG

./: README.md  entities.py  implicits.py  main.py  monsters.py  pyproject.toml  todolist.txt  utilities.py
saves/: 151599  Joji  asfdfafasd  shgop test  test  trainign test
